fix: AddPhotoCroppingModal in develop browser mode

--- a/src/features/modal/ui/add-post-cropping-modal/AddPostCroppingModal.module.scss
+++ b/src/features/modal/ui/add-post-cropping-modal/AddPostCroppingModal.module.scss
@@ -65,11 +65,6 @@
       width: 5.125rem;
       height: 5.125rem;
 
-      .photoDropDown {
-        width: 5.125rem;
-        height: 5.125rem;
-      }
-
       .deletePhoto {
         cursor: pointer;
 
@@ -98,16 +93,19 @@
   }
 
   .addNewPhoto {
-    .addPhotoInput {
-      display: none;
-    }
+    .addPhotoInputBlock {
+      .addPhotoInput {
+        display: none;
+      }
 
-    .error {
-      stroke: var(--color-danger-500);
-    }
+      .error {
+        cursor: pointer;
+        stroke: var(--color-danger-500);
+      }
 
-    & svg {
-      cursor: pointer;
+      .noError {
+        cursor: pointer;
+      }
     }
   }
 }
